Corect cod css in gallery

--- a/css/index.css
+++ b/css/index.css
@@ -589,26 +589,27 @@ a.a-rooms{
     color: #fff4e9;
     border-width: 2px;
 }
+
 .gallery{
+    position: relative;
     padding-top: 80px;
     padding-bottom: 90px;
-    flex-basis: auto;
-    object-fit: cover;
-    display: block; 
     background: linear-gradient( rgba(184, 141, 97, 0.96),rgba(184, 141, 97, 0.96)), url(/img/gallery/gallery-background.png);
 }
 .gallery > .gallery-h2 {
     word-wrap: break-word;
     text-align: left;
-    font-size: inherit;
     display: block;
     color: #fff!important;
 }
- .img-gallery{
-    object-fit: cover;
-    vertical-align: baseline;
+ /*.img-gallery{
+    font-family: "object-fit:cover";
+    -webkit-box-pack: center;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    display: flex;
     flex-basis: auto;
-    object-fit: cover;
+    object-fit: cover;}*/
 
 
 
