--- a/css/index.css
+++ b/css/index.css
@@ -621,13 +621,14 @@ a.a-rooms{
 
 /*Events block*/
 .events > .events-container > .container > .row > .col > .card > .ev-image > .img{
-    width: 100%;
-    height: auto;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .events > .events-container > .container > .row > .col > .card > .ev-image{
-    max-width: 100%;
     align-items: center;
+    width: 100%;
+    object-fit: cover;
 }
 
 .events > .events-container > .container > .row > .col > .card .card-body > .d-flex > .button{
@@ -689,12 +690,12 @@ a.a-rooms{
 
 /*Partners block*/
 .partners > .partners-block > #partners-carousel > .carousel-inner > .carousel-item{
-    padding-left: 36px;
-    padding-right: 36px;
+    padding-left: auto;
+    padding-right: auto;
 }
 .partners > .partners-block > #partners-carousel > .carousel-inner{
-    padding-top: auto;
-    margin-top: 45px;
+    max-height: fit-content;
+    max-width: 100%;
 }
 
 .partners > .partners-block > #partners-carousel{
@@ -712,8 +713,6 @@ a.a-rooms{
     padding-top: 80px;
     padding-bottom: 90px;
 }
-
-
 /**/
 
 
