--- a/css/index.css
+++ b/css/index.css
@@ -432,13 +432,17 @@ h3.h-can-do{
     padding: 0 0 0 0;
     margin: 0 0 0 0;
     text-align: center;
-    font-size: 15px;
+    font-size: 12px;
 }
+
+
 
 .wygff > .wygff-container > .container .col > .card > .card-body {
     padding: 0 0 0 0;
     margin-top: 20px;
     text-align: center;
+    
+    
 }
 
 .wygff > .wygff-container > .container .col > .card{
@@ -450,15 +454,19 @@ h3.h-can-do{
     background-color: #fdf6f0;
     text-align: center;
     border-radius:0;
-
+    
 }
 
 .wygff > .wygff-container > .container .col{
     margin-top: 50px;
     padding: 0 0 0 0;
+    display: inline-block;
+    line-height: 100%;
+    padding: 10px;
 }
 .wygff > .wygff-container > .container > .row{
     margin: 0 0 0 0;
+    
 }
 
 .wygff > .wygff-container > .container{
@@ -496,10 +504,8 @@ h3.h-can-do{
 
 @media (min-width: 1280px) {
     .wygff > .wygff-container > .container > .row{
-        max-width: 1200px;
-        padding-left: 40px;
-        padding-right: 40px;
-        margin-top: 30px;
+        padding-top: 80px;
+        padding-bottom: 100px;
     }
 }
 /**/
@@ -571,6 +577,9 @@ a.a-rooms{
 .our-rooms > .rooms-container > .container .col{
     margin-top: 30px;
     padding: 0 0 0 0;
+    display: inline-block;
+    line-height: 100%;
+    padding: 10px;
 }
 .our-rooms > .rooms-container > .container > .row{
     margin: 0 0 0 0;
@@ -646,6 +655,7 @@ a.a-rooms{
     padding: 0 0 0 0;
     margin-top: 20px;
     text-align: center;
+    
 }
 
 
@@ -663,6 +673,9 @@ a.a-rooms{
 .events > .events-container > .container > .row > .col{
     margin-top: 30px;
     padding: 0 0 0 0;
+    display: inline-block;
+    line-height: 100%;
+    padding: 10px;
 }
 
 .events > .events-container > .container > .row{
@@ -716,7 +729,24 @@ a.a-rooms{
 }
 /**/
 
+/*Testimonials block*/
 
+
+
+.testi > .testi-container{
+    align-items: center;
+    padding-left: 24px;
+    padding-right: 24px;
+    margin-top: 45px;
+}
+
+.testi {
+    padding-top: 80px;
+    padding-bottom: 90px;
+}
+/**/
+
+/**/
 .gallery{
     position: relative;
     padding-top: 80px;
