fix gallery code

--- a/css/index.css
+++ b/css/index.css
@@ -847,27 +847,33 @@ a.a-rooms{
 /**/
 
 /**/
-.gallery{
-    position: relative;
-    padding-top: 80px;
-    padding-bottom: 90px;
-    background: linear-gradient( rgba(184, 141, 97, 0.96),rgba(184, 141, 97, 0.96)), url(/img/gallery/gallery-background.png);
-}
-.gallery > .gallery-h2 {
+
+.gallery > h2 {
     word-wrap: break-word;
     text-align: left;
     display: block;
     color: #fff!important;
 }
-.grid {
-    display: grid;
+
+.gallery > .gallery-container > .gallery-grid > img{
+    width: 100%;
+    padding-top: 30px;
+    align-items: center;
 }
- /*.img-gallery{
-    font-family: "object-fit:cover";
-    -webkit-box-pack: center;
-    flex-wrap: wrap;
-    box-sizing: border-box;
-    display: flex;
-    flex-basis: auto;
-    object-fit: cover;}*/
+
+.gallery > .gallery-container > .gallery-grid{
+    align-items: center;
+}
+
+.gallery > .gallery-container{
+    padding-left: 24px;
+    padding-right: 24px;
+}
+
+.gallery{
+    padding-top: 80px;
+    padding-bottom: 90px;
+    background: linear-gradient( rgba(184, 141, 97, 0.96),rgba(184, 141, 97, 0.96)), url(/img/gallery/gallery-background.png);
+}
+
 
