--- a/css/index.css
+++ b/css/index.css
@@ -916,7 +916,7 @@ a.a-rooms{
     margin-top: 20px;
 }
 .footer-email button{
-    margin: 35px 0 0;
+    margin: 35px 0px 0px;
     width: 100%;
 }
 
