--- a/css/index.css
+++ b/css/index.css
@@ -278,7 +278,7 @@ h3.h-can-do{
 }
 
 .wcyd > .wcyd-container > .container .col > .enjoy-sad{
-    background: no-repeat center /100% auto url(../img/what-you-can-do/coffee-break.webp);
+    background: no-repeat center /auto 100% url(../img/what-you-can-do/coffee-break.webp);
 }
 
 .wcyd > .wcyd-container > .container .col > .communicate{
@@ -290,33 +290,30 @@ h3.h-can-do{
 }
 
 .wcyd > .wcyd-container > .container .col > .card{
-    padding-left: 27px;
-    padding-right: 27px;
-    padding-top: 39px;
-    padding-bottom: 39px;
     border: 0px;
     background-color: #ffffff;
     text-align: center;
-    border-radius:0;
+    border-radius: 0;
 }
 
 .wcyd > .wcyd-container > .container .col{
-    margin-top: 50px;
-    padding: 0 0 0 0;
-    
+    margin: 10px;
+    padding: 0;
 }
 
 .wcyd > .wcyd-container > .container > .row{
-    margin: 0 0 0 0;
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
 .wcyd > .wcyd-container > .container{
     margin-top: 45px;
-    padding: 0 0 0 0;
+    padding: 0;
 }
 
 .wcyd > .wcyd-container > .wcyd-header{
     align-items: center;
+    max-width: 1200px;
 }
 
 .wcyd > .wcyd-container{
@@ -330,163 +327,62 @@ h3.h-can-do{
     padding-bottom: 90px;
     background-color: #fff4e9;
 }
-/**/
 
 @media (min-width: 770px) {
-    .wcyd > .wcyd-container > .container .col > .card > .card-body{
-        padding: 0 0 0 0;
-    }
 
-    .wcyd > .wcyd-container > .container .col > .card{
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-top: 46px;
-        padding-bottom: 46px;
-        border: 0px;
-        background-color: #ffffff;
-        text-align: center;
-        border-radius:0;
-    }
-    
-    .wcyd > .wcyd-container > .container .col{
-        margin-top: 30px;
-        padding-left: 15px;
-        padding-right: 15px;
-        
-    }
     .wcyd > .wcyd-container > .container > .row{
-        margin-top: -30px;
-        margin-left: -15px;
-        margin-right: -15px;
-        display: flex;
-    }
-
-    .wcyd > .wcyd-container > .container{
-        margin-top: 40px;
-        padding: 0 0 0 0;
-    }
-
-    .wcyd > .wcyd-container > .wcyd-header{
-        text-align: center;
+        grid-template-columns: 1fr 1fr;
     }
 
     .wcyd > .wcyd-container{
         padding-left: 32px;
         padding-right: 32px;
-        margin-left: auto;
-        margin-right: auto;
     }
 
     .wcyd {
-        align-items: center;
         padding-top: 80px;
         padding-bottom: 90px;
-        background-color: #fff4e9;
     }
 }
 
 @media (min-width: 990px) {
-    .wcyd > .wcyd-container > .container .col > .card > .card-body{
-        padding: 0 0 0 0;
-    }
 
-    .wcyd > .wcyd-container > .container .col > .card{
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-top: 46px;
-        padding-bottom: 46px;
-        border: 0px;
-        background-color: #ffffff;
-        text-align: center;
-        border-radius:0;
-    }
-    
-    .wcyd > .wcyd-container > .container .col{
-        margin-top: 30px;
-        margin-left: 15px;
-        margin-right: 15px;
-    }
     .wcyd > .wcyd-container > .container > .row{
-        padding: auto;
-      
-    }
-
-    .wcyd > .wcyd-container > .container{
-        padding: 0 0 0 0;
-    }
-
-    .wcyd > .wcyd-container > .wcyd-header{
-        text-align: center;
+        grid-template-columns: 1fr 1fr 1fr;
+       
     }
 
     .wcyd > .wcyd-container{
-        padding-left: 32px;
-        padding-right: 32px;
-        margin-left: auto;
-        margin-right: 0;
-        margin-top: auto;
-        margin-bottom: auto;
+        padding-left: 40px;
+        padding-right: 40px;
     }
 
     .wcyd {
-        align-items: center;;
-        padding-left: 32px;
-        padding-right: 32px;
-        background-color: #fff4e9;
+        padding-top: 90px;
+        padding-bottom: 100px;
     }
 }
 
-
 @media (min-width: 1200px) {
-    .wcyd > .wcyd-container > .container .col > .card > .card-body{
-        padding: 0 0 0 0;
-    }
-
-    .wcyd > .wcyd-container > .container .col > .card{
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-top: 60px;
-        padding-bottom: 60px;
-        border: 0px;
-        background-color: #ffffff;
-        text-align: center;
-        border-radius:0;
-    }
-    
-    .wcyd > .wcyd-container > .container .col{
-        margin-top: 30px;
-        margin-left: 15px;
-        margin-right: 15px;
-    }
-    .wcyd > .wcyd-container > .container > .row{
-        margin-top: -30px;
-        margin-left: -15px;
-        margin-right: -15px;
-    }
 
     .wcyd > .wcyd-container > .container{
-       
-        padding: 0 0 0 0;
-    }
-
-    .wcyd > .wcyd-container > .wcyd-header{
-        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .wcyd > .wcyd-container{
         padding-left: 15px;
         padding-right: 15px;
-        margin-left: auto;
-        margin-right: auto;
     }
 
     .wcyd {
         align-items: center;
-        padding-top: 80px;
+        padding-top: 90px;
         padding-bottom: 100px;
-        background-color: #fff4e9;
+        
     }
 }
+/**/
 
 
 
@@ -587,6 +483,8 @@ h3.h-can-do{
     }
 }
 /**/
+
+
 
 /*Our rooms block*/
 p.p-rooms  {
@@ -961,12 +859,19 @@ a.a-rooms{
 
 /*Testimonials block*/
 
+.testi > .testi-container > .testi-text  > .testi-carousel > .carousel-indicators {
+    margin-top: 10px;
+    color: rgb(184, 141, 97);    ;
+}
 
+.testi > .testi-container > .testi-text  > .testi-carousel  {
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
-.testi > .testi-container > .testi-text {
-    height: 37px;
-    width: 272px;
+.testi > .testi-container > .testi-text >  {
     text-align: center;
+    margin-top: 50px;
 }
 
 .testi > .testi-container{
@@ -1154,9 +1059,10 @@ a.a-rooms{
     .form > .form-container{
         padding-left: 40px;
         padding-right: 40px;
+        
     }
 }
-
+                        
 @media (min-width: 1280px) {
     .form > .form-container > .form-block{
         margin-left: auto;
