--- a/css/index.css
+++ b/css/index.css
@@ -277,28 +277,24 @@ h3.h-can-do{
     margin: 0 0 0 0;
 }
 
-.wcyd > .wcyd-container > .container .col > .enjoy-sad{
-    background: no-repeat center /auto 100% url(../img/what-you-can-do/coffee-break.webp);
+.wcyd > .wcyd-container > .container .wcyd-card > .enjoy-sad{
+    background: no-repeat center /100% auto url(../img/what-you-can-do/coffee-break.png);
 }
 
-.wcyd > .wcyd-container > .container .col > .communicate{
-    background: no-repeat center /auto 100% url(../img/what-you-can-do/business-meeting.webp);
+.wcyd > .wcyd-container > .container .wcyd-card > .communicate{
+    background: no-repeat center /100% auto url(../img/what-you-can-do/business-meeting.png);
 }
 
-.wcyd > .wcyd-container > .container .col > .work{
-    background: no-repeat center /auto 100% url(../img/what-you-can-do/working-table.webp);
+.wcyd > .wcyd-container > .container .wcyd-card > .work{
+    background: no-repeat center /100% auto url(../img/what-you-can-do/working-table.png);
 }
 
-.wcyd > .wcyd-container > .container .col > .card{
-    border: 0px;
+.wcyd > .wcyd-container > .container .wcyd-card > .wcyd-body{
     background-color: #ffffff;
-    text-align: center;
-    border-radius: 0;
 }
 
-.wcyd > .wcyd-container > .container .col{
-    margin: 10px;
-    padding: 0;
+.wcyd > .wcyd-container > .container .wcyd-card{
+    text-align: center;
 }
 
 .wcyd > .wcyd-container > .container > .row{
@@ -329,9 +325,12 @@ h3.h-can-do{
 }
 
 @media (min-width: 770px) {
+    
 
     .wcyd > .wcyd-container > .container > .row{
         grid-template-columns: 1fr 1fr;
+        margin-left: 15px;
+        margin-right: 15px;
     }
 
     .wcyd > .wcyd-container{
@@ -364,7 +363,11 @@ h3.h-can-do{
 }
 
 @media (min-width: 1200px) {
-
+    .wcyd > .wcyd-container > .container > .row > .wcyd-card{
+        padding-top: auto;
+        padding-bottom: auto;
+    }
+    
     .wcyd > .wcyd-container > .container{
         margin-left: auto;
         margin-right: auto;
@@ -858,15 +861,25 @@ a.a-rooms{
 
 
 /*Testimonials block*/
-
-.testi > .testi-container > .testi-text  > .testi-carousel > .carousel-indicators {
-    margin-top: 10px;
-    color: rgb(184, 141, 97);    ;
+ 
+.testi > .testi-container > .testi-text  > .carousel > .carousel-indicators > .testi-button > .testi-img{
+    border-radius: 50%;
 }
 
-.testi > .testi-container > .testi-text  > .testi-carousel  {
+
+.testi > .testi-container > .testi-text  > .carousel > .carousel-indicators > .testi-button{
+    color: rgb(184, 141, 97);
+}
+
+.testi > .testi-container > .testi-text  > .carousel > .carousel-indicators {
+    margin-top: 10px;
+    
+}
+
+.testi > .testi-container > .testi-text  > .carousel  {
     padding-left: 15px;
     padding-right: 15px;
+      
 }
 
 .testi > .testi-container > .testi-text >  {
