--- a/css/index.css
+++ b/css/index.css
@@ -91,11 +91,11 @@ header > .header a{
 /**/
 
 
+/*Header text block*/
 header > .header-bottom {
     background: linear-gradient( rgba(44, 29, 46, 0.5),rgba(44, 29, 46, 0.5)), url(../img/header/header.jpg) no-repeat center/auto 100%;
 }
 
-/*Header text block*/
 header > .header-bottom > .header-bg > #header_bg > .hero > .hero-inner > .hero-text{
     text-align: center;
     margin-top: 50px;
@@ -169,7 +169,7 @@ header > .header-bottom > .header-bg > #header_bg > .hero-button{
     }
 
     header > .header-bottom {
-        background: linear-gradient( rgba(44, 29, 46, 0.5),rgba(44, 29, 46, 0.5)),  no-repeat center/100% auto url(../img/header/header.jpg);
+        background: linear-gradient( rgba(44, 29, 46, 0.5),rgba(44, 29, 46, 0.5)), url(../img/header/header.jpg) no-repeat center/100% auto;
     }
 
     header > .header-bottom > .header-bg > #header_bg{
@@ -291,25 +291,35 @@ h3.h-can-do{
 
 .wcyd > .wcyd-container > .container .wcyd-card > .wcyd-body{
     background-color: #ffffff;
+    padding-top: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: auto;
 }
 
 .wcyd > .wcyd-container > .container .wcyd-card{
     text-align: center;
+    margin-top: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .wcyd > .wcyd-container > .container > .row{
     display: grid;
     grid-template-columns: 1fr;
+    
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .wcyd > .wcyd-container > .container{
     margin-top: 45px;
-    padding: 0;
+    padding: 0 0 0 0;
+    max-width: 1200px;
 }
 
 .wcyd > .wcyd-container > .wcyd-header{
-    align-items: center;
-    max-width: 1200px;
+    text-align: center;
 }
 
 .wcyd > .wcyd-container{
@@ -325,7 +335,17 @@ h3.h-can-do{
 }
 
 @media (min-width: 770px) {
+    .wcyd > .wcyd-container > .container .wcyd-card > .enjoy-sad{
+        background: no-repeat center /auto 100% url(../img/what-you-can-do/coffee-break.png);
+    }
     
+    .wcyd > .wcyd-container > .container .wcyd-card > .communicate{
+        background: no-repeat center /auto 100% url(../img/what-you-can-do/business-meeting.png);
+    }
+    
+    .wcyd > .wcyd-container > .container .wcyd-card > .work{
+        background: no-repeat center /auto 100% url(../img/what-you-can-do/working-table.png);
+    }
 
     .wcyd > .wcyd-container > .container > .row{
         grid-template-columns: 1fr 1fr;
@@ -345,6 +365,11 @@ h3.h-can-do{
 }
 
 @media (min-width: 990px) {
+
+    .wcyd > .wcyd-container > .container .wcyd-card > .wcyd-body{
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
 
     .wcyd > .wcyd-container > .container > .row{
         grid-template-columns: 1fr 1fr 1fr;
