--- a/css/index.css
+++ b/css/index.css
@@ -294,7 +294,7 @@ h3.h-can-do{
     padding-top: 40px;
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: auto;
+    padding-bottom: 40px;
 }
 
 .wcyd > .wcyd-container > .container .wcyd-card{
