--- a/css/index.css
+++ b/css/index.css
@@ -536,24 +536,24 @@ a.a-rooms{
     margin: 0 0 0 0;
 }
 
-.our-rooms > .rooms-container > .container .col > .card > .damn-image > .rooms{
+.our-rooms > .rooms-container > .containery .col > .card > .damn-image > .rooms{
     max-width: 100%;
     max-height: 100%;
     align-items: center;
     
 }
 
-.our-rooms > .rooms-container > .container .col > .card > .damn-image{
+.our-rooms > .rooms-container > .containery .col > .card > .damn-image{
     align-items: center;
 }
 
-.our-rooms > .rooms-container > .container .col > .card > .card-body > h3{
+.our-rooms > .rooms-container > .containery .col > .card > .card-body > h3{
     padding: 0 0 0 0;
     margin: 0 0 0 0;
     text-align: left;
 }
 
-.our-rooms > .rooms-container > .container .col > .card > .card-body > p{
+.our-rooms > .rooms-container > .containery .col > .card > .card-body > p{
     padding: 0 0 0 0;
     margin: 0 0 0 0;
     margin-top: 20px;
@@ -561,13 +561,13 @@ a.a-rooms{
     text-align: left;
 }
 
-.our-rooms > .rooms-container > .container .col > .card > .card-body {
+.our-rooms > .rooms-container > .containery .col > .card > .card-body {
     padding: 0 0 0 0;
     margin-top: 20px;
     text-align: left;
 }
 
-.our-rooms > .rooms-container > .container .col > .card{
+.our-rooms > .rooms-container > .containery .col > .card{
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 30px;
@@ -578,23 +578,22 @@ a.a-rooms{
     border-radius:0;
 }
 
-.our-rooms > .rooms-container > .container .col{
+.our-rooms > .rooms-container > .containery .col{
     margin-top: 30px;
     padding: 0 0 0 0;
     line-height: 100%;
     padding: 10px;
 }
 
-.our-rooms > .rooms-container > .container > .row{
-    margin: 0 0 0 0;
-    width: 100%;
-    display: flex;
-    align-items: stretch;
+.our-rooms > .rooms-container > .containery > .row{
+    display: grid;
 }
 
-.our-rooms > .rooms-container > .container{
+.our-rooms > .rooms-container > .containery{
     margin-top: 45px;
     padding: 0 0 0 0;
+    margin-left: 0;
+    margin-right: 0;
     
 }
 
@@ -609,6 +608,30 @@ a.a-rooms{
     padding-bottom: 90px;
     background-color: #fff4e9;
 }
+
+@media (min-width:320px) {
+    .our-rooms > .rooms-container > .containery .col > .card{
+    min-height: 600px;
+    }
+}
+
+@media (min-width:770px) {
+    .our-rooms > .rooms-container > .containery .col > .card{
+        min-height: 745px;
+    }
+    
+    .our-rooms > .rooms-container{
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+    
+    .our-rooms {
+        align-items: center;
+        padding-top: 80px;
+        padding-bottom: 95px;
+    }
+}
+
 /**/
 
 
@@ -1101,6 +1124,11 @@ a.a-rooms{
 
 @media (min-width: 770px) {
     .form > .form-container > .form-block{
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .form > .form-container > .form-block{
         padding: 45px 60px;
     }
     .form > .form-container{
@@ -1121,13 +1149,8 @@ a.a-rooms{
         padding-right: 40px;
         
     }
-}
-                        
+}                      
 @media (min-width: 1280px) {
-    .form > .form-container > .form-block{
-        margin-left: auto;
-        margin-right: auto;
-    }
     .form > .form-container{
         padding-left: 15px;
         padding-right: 15px;
