--- a/css/index.css
+++ b/css/index.css
@@ -307,15 +307,16 @@ h3.h-can-do{
 .wcyd > .wcyd-container > .container > .row{
     display: grid;
     grid-template-columns: 1fr;
-    
     margin-left: 15px;
     margin-right: 15px;
+    
 }
 
 .wcyd > .wcyd-container > .container{
     margin-top: 45px;
     padding: 0 0 0 0;
     max-width: 1200px;
+    
 }
 
 .wcyd > .wcyd-container > .wcyd-header{
@@ -325,6 +326,7 @@ h3.h-can-do{
 .wcyd > .wcyd-container{
     padding-left: 24px;
     padding-right: 24px;
+   
 }
 
 .wcyd {
@@ -337,6 +339,7 @@ h3.h-can-do{
 @media (min-width: 770px) {
     .wcyd > .wcyd-container > .container .wcyd-card > .enjoy-sad{
         background: no-repeat center /auto 100% url(../img/what-you-can-do/coffee-break.png);
+        
     }
     
     .wcyd > .wcyd-container > .container .wcyd-card > .communicate{
@@ -348,20 +351,17 @@ h3.h-can-do{
     }
 
     .wcyd > .wcyd-container > .container > .row{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+        grid-template-columns: 1fr 1fr;
         margin-left: 15px;
         margin-right: 15px;
-    }
-
-    .wcyd > .wcyd-container > .wcyd-header{
-        align-items: center;
+       
+        
     }
 
     .wcyd > .wcyd-container{
         padding-left: 32px;
         padding-right: 32px;
+       
     }
 
     .wcyd {
@@ -380,11 +380,6 @@ h3.h-can-do{
     .wcyd > .wcyd-container > .container > .row{
         grid-template-columns: 1fr 1fr 1fr;
        
-    }
-
-
-    .wcyd > .wcyd-container > .wcyd-header{
-        align-items: center;
     }
 
     .wcyd > .wcyd-container{
@@ -409,12 +404,6 @@ h3.h-can-do{
         margin-right: auto;
     }
 
-    .wcyd > .wcyd-container > .wcyd-header{
-        align-items: center;
-        text-align: center;
-        
-    }
-
     .wcyd > .wcyd-container{
         padding-left: 15px;
         padding-right: 15px;
@@ -428,6 +417,7 @@ h3.h-can-do{
     }
 }
 /**/
+
 
 
 
