--- a/css/index.css
+++ b/css/index.css
@@ -278,16 +278,17 @@ h3.h-can-do{
 }
 
 .wcyd > .wcyd-container > .container .wcyd-card > .enjoy-sad{
-    background: no-repeat center /100% auto url(../img/what-you-can-do/coffee-break.png);
+    background: no-repeat center /auto 100% url(../img/what-you-can-do/coffee-break.png);
 }
 
 .wcyd > .wcyd-container > .container .wcyd-card > .communicate{
-    background: no-repeat center /100% auto url(../img/what-you-can-do/business-meeting.png);
+    background: no-repeat center /auto 100% url(../img/what-you-can-do/business-meeting.png);
 }
 
 .wcyd > .wcyd-container > .container .wcyd-card > .work{
-    background: no-repeat center /100% auto url(../img/what-you-can-do/working-table.png);
+    background: no-repeat center /auto 100% url(../img/what-you-can-do/working-table.png);
 }
+
 
 .wcyd > .wcyd-container > .container .wcyd-card > .wcyd-body{
     background-color: #ffffff;
@@ -309,14 +310,12 @@ h3.h-can-do{
     grid-template-columns: 1fr;
     margin-left: 15px;
     margin-right: 15px;
-    
 }
 
 .wcyd > .wcyd-container > .container{
     margin-top: 45px;
     padding: 0 0 0 0;
     max-width: 1200px;
-    
 }
 
 .wcyd > .wcyd-container > .wcyd-header{
@@ -326,7 +325,6 @@ h3.h-can-do{
 .wcyd > .wcyd-container{
     padding-left: 24px;
     padding-right: 24px;
-   
 }
 
 .wcyd {
@@ -336,10 +334,23 @@ h3.h-can-do{
     background-color: #fff4e9;
 }
 
+@media (min-width: 500px) {
+    .wcyd > .wcyd-container > .container .wcyd-card > .enjoy-sad{
+        background: no-repeat center /100% auto url(../img/what-you-can-do/coffee-break.png);
+    }
+    
+    .wcyd > .wcyd-container > .container .wcyd-card > .communicate{
+        background: no-repeat center /100% auto url(../img/what-you-can-do/business-meeting.png);
+    }
+    
+    .wcyd > .wcyd-container > .container .wcyd-card > .work{
+        background: no-repeat center /100% auto url(../img/what-you-can-do/working-table.png);
+    }
+}
+
 @media (min-width: 770px) {
     .wcyd > .wcyd-container > .container .wcyd-card > .enjoy-sad{
         background: no-repeat center /auto 100% url(../img/what-you-can-do/coffee-break.png);
-        
     }
     
     .wcyd > .wcyd-container > .container .wcyd-card > .communicate{
@@ -354,14 +365,11 @@ h3.h-can-do{
         grid-template-columns: 1fr 1fr;
         margin-left: 15px;
         margin-right: 15px;
-       
-        
     }
 
     .wcyd > .wcyd-container{
         padding-left: 32px;
         padding-right: 32px;
-       
     }
 
     .wcyd {
@@ -417,6 +425,7 @@ h3.h-can-do{
     }
 }
 /**/
+
 
 
 
